Fix header on tablet devices.

--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 1165px) {
+  div#header {
+    width: 90% !important;
+  }
+
   section#hero {
     width: 90% !important;
 
